<resources>
    <string name="app_name">BK Food Court</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_change_password">Change password</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="watermark">Powered by ProDevs Team</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_food_detail">Food Detail</string>

    <string name="popular_categories">Popular</string>
    <string name="best_deals">Best Deals</string>
    <string name="or">OR</string>
    <string name="loading">Loading...</string>
</resources>